# check_uncommitted_git_changes

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  CONTRIBUTING.md  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: build.yaml
check_uncommitted_git_changes/: __init__.py  main.py
scripts/: build_test_coverage_report.sh
tests/: __init__.py  test_main.py
